<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Cadastro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/fitnow" />

    <EditText
        android:id="@+id/editTextTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_input"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextTextEmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_input"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/emailcadastro"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextTextSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_input"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/senhacadastro"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextTextRepetirASenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_input"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/repetir_a_senha"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextTextCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_input"
        android:drawableLeft="@drawable/ic_local_atm"
        android:drawablePadding="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/cpf"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/background_button"
        android:text="@string/cadastrar" />

</LinearLayout>